# lyra

./: .gitignore  Cargo.toml  README.md  Trunk.toml  build.rs  package.json
.github/ISSUE_TEMPLATE/: bug_report.md
form/: Cargo.toml
form-macro/: Cargo.toml
form-macro/src/: lib.rs
form-macro/tests/: it_works.rs
form/src/: lib.rs
hotkey/: Cargo.toml
hotkey/src/: macos.rs
keys/: Cargo.toml  README.md  build.rs
keys/.cargo/: config
keys/msvc-linker/: config.sh
keys/src/: keycodes.rs  lib.rs  macos.rs  traits.rs  windows.rs
lyra/: Cargo.toml  build.rs
lyra-common/: Cargo.toml
lyra-common/src/: convert.rs
lyra-plugin/: Cargo.toml
lyra-plugin-apps/: Cargo.toml
lyra-plugin-apps/src/: applookup.rs  config.rs  convert.rs  lib.rs
lyra-plugin-calc/: Cargo.toml
lyra-plugin-calc/src/: config.rs  lib.rs
lyra-plugin-webq/: Cargo.toml
lyra-plugin-webq/src/: config.rs  lib.rs  template.rs
lyra-plugin/src/: apps.rs  calc.rs  config.rs  lib.rs  plugin_manager.rs  webq.rs
lyra-plugin/src/apps/: applookup.rs  config.rs
lyra-plugin/src/calc/: config.rs
lyra-plugin/src/webq/: config.rs  template.rs
lyra-ui/: Cargo.toml  index.html
lyra-ui/icons/: icon.icns
lyra-ui/src/: apps.rs  cacher.rs  calc.rs  config.rs  convert.rs  icon_ui.rs  launcher.rs  logs.rs  main.rs  plugin.rs  plugin_manager.rs  powerbar.rs  settings.rs  template.rs  webq.rs
lyra-ui/src/apps/: appcache.rs  applookup.rs
lyra/src/: error.rs  event.rs  hotkeys.rs  main.rs  protocol.rs  window.rs
lyra/src-js/: .prettierrc  .swcrc  README.md  package.json  rollup.config.js  spack.config.js
lyra/src-js/src/: index.html
lyra/src-js/src/css/: index.css
lyra/src-js/src/js/: app.css  app.js  index.js  searchResult.js
lyra/src-js/src/js/events/: event.js
public/: index.html
scripts/: migrate-alfred-to-lyra.py
src/: app.css  app.js  index.css  index.js  main.rs  useKeyPress.js  window.rs
src-js/: package.json  rollup.config.js
src-js/src/js/: app.css  useKeyPress.js
src-plugin/: Cargo.toml  README.md
src-plugin-apps/: Cargo.toml
src-plugin-apps/src/: lib.rs
src-plugin-calc/: Cargo.toml
src-plugin-mark/: Cargo.toml
src-plugin-search/: Cargo.toml
src-plugin/src/: lib.rs  plugin_internal.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: default_app.css
src-tauri/src/: calc.rs  closer.rs  config.rs  convert.rs  event.rs  launcher.rs  lookup.rs  main.rs  page.rs  plugin_manager.rs  template.rs
src-tauri/src/config/: commands.rs  logs.rs  plugins.rs  template.rs
src-tauri/src/launcher/: commands.rs  searchoption.rs
src-tauri/src/lookup/: applookup.rs
src/app/: app.css  app.js  calcResult.js  search.js  searchResult.js  useKeyPress.js  useKeybinds.js  useNavigation.js  useWindowSize.js
src/app/calc/: calc.css  calculator.js
src/app/search/: search.css  search.js  searchResult.js
src/settings/: bookmarkletmanager.js  bookmarklets.css  debounce.js  general.js  icons.css  imgtodata.js  searchermanager.js  settings.js  settings.scss  templateinput.js  textinput.js  textinput.scss  useHydration.js
tauri/: package.json  rollup.config.js
tauri/src-js/js/: app.css  app.js  index.js  searchResult.js  useKeyPress.js
tauri/src-tauri/: tauri.conf.json
