[workspace]
resolver = "2"
members = [
  "src-tauri",
  "lyra-plugin",
  "lyra-plugin-apps",
  "lyra-plugin-calc",
  "lyra-plugin-webq",
]

[workspace.dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
open = "5.0.1"
parking_lot = "0.12.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
skim = "0.10.4"
toml = "0.8.8"
tracing = "0.1.40"
