[workspace]
resolver = "2"
members = [ 
  "lyra-common",
  "lyra-plugin",
  "lyra-ui",
]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true

[workspace.dependencies]
anyhow = "1.0.75"
base64 = "0.21.5"
egui = "0.25.0"
open = "5.0.1"
parking_lot = "0.12.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nucleo-matcher = "0.2.0"
toml = "0.8.8"
tracing = "0.1.40"

[patch.crates-io]
egui = { git = "https://github.com/dfontana/egui.git", branch = "dfontana-next" }
