[package]
name = "hotkey"
version = "0.1.0"
authors = ["dfontana <dyfontana@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3", features = ["winuser", "errhandlingapi"]}

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.18"

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1"
