[package]
name = "keys"
version = "0.1.0"
authors = ["dfontana <dyfontana@gmail.com>"]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.22"
core-graphics = {version = "0.19.0", features = ["highsierra"]}
core-foundation = {version = "0.7"}
core-foundation-sys = {version = "0.7"}