[package]
name = "lyra-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = {workspace = true}
base64 = { workspace = true }
egui = { workspace = true }
reqwest = "0.11.22"
tracing = { workspace = true }
