[package]
name = "lyra-plugin-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyra-plugin = { path = "../lyra-plugin" }
anyhow = "1.0.57"
base64 = "0.21.0"
glob = "0.3.0"
icns = "0.3.1"
parking_lot = "0.12.0"
plist = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.1"
tracing = "0.1.34"
