[package]
name = "lyra-plugin-apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyra-plugin = { path = "../lyra-plugin" }
anyhow = {workspace=true}
base64 = {workspace = true}
egui = { workspace = true }
glob = "0.3.1"
icns = "0.3.1"
open = {workspace=true}
parking_lot = {workspace=true}
plist = "1.6.0"
serde = {workspace=true}
serde_json = {workspace=true}
toml = {workspace=true}
tracing = {workspace=true}
