[package]
name = "lyra-plugin-calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyra-plugin = { path = "../lyra-plugin" }
anyhow = {workspace=true}
calc = { version = "0.4.0", default-features = false }
lalrpop-util = { version = "0.19.12", features = ["lexer"] }
parking_lot = {workspace=true}
serde_json = {workspace=true}
serde = {workspace=true}
toml = {workspace=true}
tracing = {workspace=true}
