[package]
name = "lyra-plugin-webq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyra-plugin = { path = "../lyra-plugin" }
anyhow = "1.0.57"
open = "3.2.0"
parking_lot = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.1"
tracing = "0.1.34"
