[package]
name = "lyra-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This allows invoking tauri from frontend
serde-wasm-bindgen = "0.4.3"
serde = { workspace = true }
wasm-bindgen = { version = "0.2.82", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.32"

# O11y
console_error_panic_hook = "0.1.7"
tracing = { workspace = true }
tracing-wasm = "0.2.1"

# Frontend
js-sys = "0.3.59"
sycamore = { version = "0.9.0-beta.2", features = ["suspense"] }
web-sys = "0.3.63"
