[package]
name = "lyra-ui"
description = "Lyra"
version = "0.1.0"
authors = ["Dylan Fontana"]
license = ""
repository = ""
default-run = "lyra-ui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyra-plugin = { path = "../lyra-plugin" }
lyra-plugin-apps = { path = "../lyra-plugin-apps" }
lyra-plugin-calc = { path = "../lyra-plugin-calc" }
lyra-plugin-webq = { path = "../lyra-plugin-webq" }
anyhow = { workspace = true }
arboard = "3.3.0"
base64 = { workspace = true }
chrono = "0.4.31"
derive_builder = "0.12.0"
eframe = "0.25.0"
egui = { workspace = true }
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
global-hotkey = "0.4.2"
itertools = "0.12.0"
image = "0.24.0"
nucleo-matcher = { workspace = true }
once_cell = "1.18.0"
parking_lot = { workspace = true }
reqwest = "0.11.22"
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tray-icon = "0.11.2"
winit = "0.29.10"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"
