[package]
name = "lyra-ui"
description = "Lyra"
version = "0.1.0"
authors = ["Dylan Fontana"]
license = ""
repository = ""
default-run = "lyra-ui"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lyra-common = { path = "../lyra-common" }
form = { path = "../form" }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = "0.4.31"
derive_builder = "0.12.0"
eframe = "0.25.0"
egui = { workspace = true }
egui_extras = { version = "0.25.0", features = ["all_loaders"] }
global-hotkey = "0.4.2"
itertools = "0.12.0"
image = "0.24.0"
nucleo-matcher = { workspace = true }
once_cell = "1.18.0"
parking_lot = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"
tray-icon = "0.11.2"
winit = "0.29.10"

# Calc
arboard = "3.3.0"
calc = { version = "0.4.0", default-features = false }
lalrpop-util = { version = "0.19.12", features = ["lexer"] }

# Apps
glob = "0.3.1"
icns = "0.3.1"
plist = "1.6.0"

# Apps / Webq
open = {workspace=true}
derive_more = "0.99.17"

[target."cfg(target_os = \"linux\")".dependencies]
gtk = "0.18"
