[package]
name = "lyra"
version = "0.1.1"
authors = ["dfontana <dyfontana@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
include_dir = "0.6.0"
keys = { path = "../keys" }
serde = "1.0.123"
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }
wry = {git = "https://github.com/tauri-apps/wry", rev = "81f3218d9ac55a987b050f574774afcaa0b5c2f7"}
