[package]
name = "lyra"
version = "0.1.1"
authors = ["dfontana <dyfontana@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
include_dir = "0.6.0"
keys = { path = "../keys" }
serde = "1.0.123"
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }
wry = {git = "https://github.com/tauri-apps/wry", rev = "761b2b59fe0434b3458d99ed599394af0e1e3962"}
