[package]
name = "lyra-plugin-apps"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
lyra-plugin = { path = "../src-plugin" }
abi_stable = "0.11.1"
anyhow = "1.0.57"
base64 = "0.20.0"
glob = "0.3.0"
icns = "0.3.1"
plist = "1.3.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"
tracing = "0.1.34"
