[package]
name = "lyra-plugin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi_stable = "0.11.1"
libloading = { version = "0.7.4", optional = true }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[features]
plugin_internals = ["dep:libloading"]
