[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-rc.8", features = [] }

[dependencies]
anyhow = "1.0.57"
base64 = "0.13.0"
derive_builder = "0.11.2"
glob = "0.3.0"
icns = "0.3.1"
once_cell = "1.16.0"
open = "2.1.2"
parking_lot = "0.12.0"
plist = "1.3.1"
reqwest = "0.11.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
skim = "0.9.4"
tauri = { version = "1.0.0-rc.9", features = ["api-all", "system-tray"] }
toml = "0.5.9"
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]


