[package]
name = "app"
version = "0.1.0"
description = "Lyra"
authors = ["Dylan Fontana"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true

[dependencies]
anyhow = "1.0.57"
base64 = "0.20.0"
calc = { version = "0.4.0", default-features = false }
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
chrono = "0.4.23"
derive_builder = "0.12.0"
glob = "0.3.0"
icns = "0.3.1"
once_cell = "1.16.0"
open = "3.2.0"
parking_lot = "0.12.0"
plist = "1.3.1"
reqwest = "0.11.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
skim = "0.10.2"
tauri = { version = "1.2.2", features = ["clipboard-all", "global-shortcut-all", "macos-private-api", "system-tray"] }
toml = "0.5.9"
tracing = "0.1.34"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
