[package]
name = "app"
version = "0.1.0"
description = "Lyra"
authors = ["Dylan Fontana"]
license = ""
repository = ""
default-run = "app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true

[dependencies]
lyra-plugin = { path = "../lyra-plugin" }
lyra-plugin-apps = { path = "../lyra-plugin-apps" }
lyra-plugin-calc = { path = "../lyra-plugin-calc" }
lyra-plugin-webq = { path = "../lyra-plugin-webq" }
anyhow = {workspace = true}
base64 = {workspace = true}
chrono = "0.4.31"
derive_builder = "0.12.0"
itertools = "0.12.0"
nucleo-matcher = {workspace = true}
once_cell = "1.18.0"
parking_lot = {workspace = true}
reqwest = "0.11.22"
serde_json = {workspace = true}
serde = {workspace = true}
tauri = { version = "1.5.3", features = [ "global-shortcut-all", "clipboard-all", "window-set-size", "system-tray", "macos-private-api"] }
toml = {workspace = true}
tracing = {workspace = true}
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.18"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
